--- a/src/components/footer/author/index.less
+++ b/src/components/footer/author/index.less
@@ -2,9 +2,7 @@
 	margin-top: 20px;
 
 	.avatars {
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
+		@apply bg-cover bg-center bg-no-repeat;
 	}
 
 	.author-0 {
