--- a/src/components/breadcrumbs/index.less
+++ b/src/components/breadcrumbs/index.less
@@ -1,23 +1,19 @@
 @import url('../../settings/config.less');
 
 .Breadcrumbs {
-	// margin-bottom: 80px;
-
 	@apply relative flex w-full flex-col items-start space-y-3;
 
 	.bars {
 		& > div {
-			position: relative;
 			width: 20px;
 			height: 2px;
 			background-color: #343434;
 			transition: 1s;
 			transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
 
+			@apply relative;
+
 			&::after {
-				position: absolute;
-				width: 100%;
-				height: 100%;
 				background: linear-gradient(
 					90deg,
 					rgba(118, 72, 55, 1) 0%,
@@ -25,16 +21,17 @@
 					rgba(180, 133, 113, 1) 100%
 				);
 				content: '';
-				opacity: 0;
 				transition: 1s;
+
+				@apply absolute h-full w-full opacity-0;
 			}
 		}
 
 		.active {
-			width: 80px;
+			@apply w-20;
 
 			&::after {
-				opacity: 1;
+				@apply opacity-100;
 			}
 		}
 	}
@@ -43,13 +40,6 @@
 @media only screen and (max-width: @bp) {
 	.Breadcrumbs {
 		@apply hidden;
-		// margin-bottom: 48px;
-	}
-}
-
-@media only screen and (max-height: @bpH) {
-	.Breadcrumbs {
-		// margin-bottom: 0px;
 	}
 }
 
