--- a/src/pages/payLoader/carOutline/index.less
+++ b/src/pages/payLoader/carOutline/index.less
@@ -7,7 +7,7 @@
 	@apply absolute top-0 flex h-full w-full items-center justify-center;
 
 	& > svg {
-		position: absolute;
+		@apply absolute;
 	}
 
 	.on {
