--- a/src/pages/payLoader/logo/index.less
+++ b/src/pages/payLoader/logo/index.less
@@ -28,7 +28,7 @@
 					background: linear-gradient(
 						90deg,
 						rgba(126, 77, 61, 1) 0%,
-						rgba(206, 178, 154, 1) 50%,
+						rgb(227, 206, 188) 50%,
 						rgba(126, 77, 61, 1) 100%
 					);
 					animation: brushed 10s ease-in-out infinite;
