--- a/template/template.html
+++ b/template/template.html
@@ -23,7 +23,7 @@
 	<body>
 		<script>
 			var device = window.innerWidth >= 768 ? 'desktop' : 'mobile';
-			var urls = [0, 1, 2];
+			var urls = ['0_1', 1, 2];
 			for (var i = 0; i < urls.length; i++) {
 				var video = document.createElement('video');
 				video.src = './bundle/video/settings/video/' + device + '/' + urls[i] + '.mp4';
