fix audio re-append bug

--- a/template/template.html
+++ b/template/template.html
@@ -23,10 +23,10 @@
 	<body>
 		<script>
 			var device = window.innerWidth >= 768 ? 'desktop' : 'mobile';
-			var urls = ['0_1', 1, 2];
+			var urls = { mobile: ['0_1', 1, 2], desktop: [0, 1, 2] };
 			for (var i = 0; i < urls.length; i++) {
 				var video = document.createElement('video');
-				video.src = './bundle/video/settings/video/' + device + '/' + urls[i] + '.mp4';
+				video.src = './bundle/video/settings/video/' + device + '/' + urls[device][i] + '.mp4';
 				video.autoplay = true;
 				video.controls = false;
 				video.muted = true;
