--- a/src/components/Interview/index.less
+++ b/src/components/Interview/index.less
@@ -47,6 +47,7 @@
 		margin-top: -350px;
 		width: image-width(@img) * @scale;
 		height: image-height(@img) * @scale;
+		background-size: 100%;
 
 		mask-image: url(@img);
 		mask-repeat: no-repeat;
@@ -54,7 +55,7 @@
 		@scale: 0.7;
 		@img: './img/title.svg';
 
-		@apply absolute bg-cover;
+		@apply absolute;
 
 		.gradient {
 			left: -40%;
