--- a/src/components/Interview/buttons/index.less
+++ b/src/components/Interview/buttons/index.less
@@ -73,6 +73,14 @@
 	.Button {
 		.target {
 			@apply px-5;
+
+			.breadcrumbs {
+				@apply text-3xl;
+			}
+
+			.name {
+				@apply text-lg;
+			}
 		}
 
 		.on {
