fix mobile button bug

--- a/src/components/Interview/buttons/index.less
+++ b/src/components/Interview/buttons/index.less
@@ -5,16 +5,16 @@
 	@apply pointer-events-none absolute whitespace-nowrap pb-3;
 
 	.target {
-		@apply relative flex h-auto w-auto flex-col items-start;
+		@apply pointer-events-none relative flex h-auto w-auto flex-col items-start;
 
 		.breadcrumbs {
 			margin: -0.15rem 0;
-			@apply font-notoSans text-xl;
+			@apply pointer-events-none font-notoSans text-xl;
 		}
 
 		.name {
 			margin: -0.15rem 0;
-			@apply -my-1 font-notoSans text-sm;
+			@apply pointer-events-none -my-1 font-notoSans text-sm;
 		}
 	}
 
