--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -34,7 +34,7 @@
 		.square {
 			width: 400px;
 
-			@apply flex h-5/6 items-start justify-start;
+			@apply pointer-events-none flex h-5/6 items-start justify-start;
 		}
 	}
 }
