--- a/src/pages/payLoader/processBar/index.less
+++ b/src/pages/payLoader/processBar/index.less
@@ -127,7 +127,7 @@
 }
 @media only screen and (max-height: @bpH) {
 	.ProcessBar {
-		height: 90px;
+		height: @footerHeight;
 
 		.text {
 			@apply flex-col;
