fix loading way and optimize mp3

--- a/template/template.html
+++ b/template/template.html
@@ -7,37 +7,27 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
 		<meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
-		<meta property="og:image" content="img/meta-img.jpg" />
+		<meta property="og:image" content="<%= htmlWebpackPlugin.options.url %>img/meta-img.jpg" />
 		<meta property="og:image:width" content="1280" />
 		<meta property="og:image:height" content="720" />
 		<meta property="og:url" content="<%= htmlWebpackPlugin.options.url %>" />
 		<meta property="og:type" content="website" />
 		<meta property="fb:app_id" content="171368189560011" />
 		<meta property="og:site_name" content="<%= htmlWebpackPlugin.options.title %>" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.jpg" />
-		<link rel="image_src" href="img/meta-img.jpg" />
-		<link href="img/favicon.png" rel="icon" type="image/x-icon" />
+		<link
+			rel="apple-touch-icon"
+			href="<%= htmlWebpackPlugin.options.url %>img/apple-touch-icon.jpg"
+		/>
+		<link rel="image_src" href="<%= htmlWebpackPlugin.options.url %>img/meta-img.jpg" />
+		<link
+			href="<%= htmlWebpackPlugin.options.url %>img/favicon.png"
+			rel="icon"
+			type="image/x-icon"
+		/>
 		<meta name="apple-mobile-web-app-capable" content="no" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	</head>
 	<body>
-		<script>
-			var device = window.innerWidth >= 768 ? 'desktop' : 'mobile';
-			var urls = [0, 1, 2];
-			for (var i = 0; i < urls.length; i++) {
-				var video = document.createElement('video');
-				video.src = './bundle/video/settings/video/' + device + '/' + urls[i] + '.mp4';
-				video.autoplay = true;
-				video.controls = false;
-				video.muted = true;
-				video.height = 0;
-				video.width = 0;
-				video.preload = 'auto';
-				video.style.display = 'none';
-				video.style.visibility = 'hidden';
-				document.body.prepend(video);
-			}
-		</script>
 		<div id="app"></div>
 	</body>
 </html>
