--- a/src/settings/fonts/stylesheet.css
+++ b/src/settings/fonts/stylesheet.css
@@ -1,8 +1,6 @@
 @font-face {
 	font-weight: normal;
 	font-style: normal;
-	font-family: 'SourceHanSansTW-Regular-Alphabetic';
-	src: url('subset-SourceHanSansTW-Regular-Alphabetic.woff2') format('woff2'),
-		url('subset-SourceHanSansTW-Regular-Alphabetic.woff') format('woff'),
-		url('subset-SourceHanSansTW-Regular-Alphabetic.ttf') format('truetype');
+	font-family: 'Noto Serif JP';
+	src: url('NotoSerifJP-Black.ttf') format('truetype');
 }
