--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -5,15 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@700&display=swap');
+@import url('./fonts/stylesheet.css');
 
-// @layer base {
-// 	img,
-// 	video {
-// 		max-width: unset;
-// 		height: unset;
-// 	}
-// }
 body {
 	position: fixed;
 	overflow: hidden;
