adjustment loading, font and remove template video

--- a/src/pages/payLoader/authorsIntroduction/index.less
+++ b/src/pages/payLoader/authorsIntroduction/index.less
@@ -5,7 +5,7 @@
 		@apply flex w-full max-w-xl flex-col justify-center space-y-8 md:max-w-none;
 
 		.title {
-			@apply w-full text-center font-notoSans text-xl font-light text-white md:text-lg;
+			@apply w-full text-center font-notoSansLight text-xl text-white md:text-lg;
 		}
 
 		.authors {
@@ -44,11 +44,11 @@
 				}
 
 				.name {
-					@apply pt-1 font-notoSans text-lg font-light text-white;
+					@apply pt-1 font-notoSansLight text-lg text-white;
 				}
 
 				.positionName {
-					@apply font-notoSans text-base font-light;
+					@apply font-notoSansLight text-base;
 				}
 			}
 		}
