--- a/src/components/Interview/index.less
+++ b/src/components/Interview/index.less
@@ -4,7 +4,7 @@
 	@apply absolute top-0 h-full w-full;
 
 	.cistern {
-		@apply relative flex h-full w-full items-center justify-center overflow-hidden;
+		@apply relative flex h-full w-full items-center justify-center overflow-visible;
 
 		.vehicle {
 			width: 1920px;
