--- a/src/pages/payLoader/processBar/index.less
+++ b/src/pages/payLoader/processBar/index.less
@@ -25,6 +25,13 @@
 			rgba(205, 178, 154, 1) 50%,
 			rgba(118, 72, 55, 1) 100%
 		);
+		&::before {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(), 72, 55, 1;
+			content: '';
+		}
 
 		@apply absolute top-0 w-0;
 	}
