--- a/src/components/audio/index.less
+++ b/src/components/audio/index.less
@@ -46,13 +46,13 @@
 		.text {
 			width: image-width(@img) * @scale;
 			height: image-height(@img) * @scale;
+			background-image: url(@img);
+			background-position: center;
+			background-size: 100%;
+			background-repeat: no-repeat;
 
-			@scale: 0.9;
+			@scale: 0.5;
 			@img: './img/text.svg';
-			mask-image: url(@img);
-			mask-repeat: no-repeat;
-			mask-position: center;
-			mask-size: 100%;
 
 			@apply pointer-events-auto hidden cursor-pointer;
 
@@ -97,7 +97,7 @@
 				width: image-width(@img) * @scale;
 				height: image-height(@img) * @scale;
 
-				@scale: 1.2;
+				@scale: 0.7;
 				@img: './img/text.svg';
 			}
 		}
