--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -1,3 +1,5 @@
+@import url('../settings/config.less');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,12 +9,6 @@
 @import url('./fonts/stylesheet.css');
 
 body {
-	position: fixed;
-	overflow: hidden;
-	margin: 0;
-	height: 100vh;
-	height: 100dvh;
-
 	text-size-adjust: none;
 	overscroll-behavior: none;
 	overscroll-behavior-y: none;
@@ -27,9 +23,20 @@ body {
 	@apply w-full;
 }
 
+#app {
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+}
+
 @media only screen and (max-height: 930px) {
 	body {
 		position: relative;
 		overflow: auto;
+	}
+}
+@media only screen and (max-width: @bp) {
+	#app {
+		height: 100%;
 	}
 }
