refactor: 整理 Interview 組件，移除多餘的程式碼並優化樣式

--- a/src/components/backgroundGrid/index.less
+++ b/src/components/backgroundGrid/index.less
@@ -7,8 +7,10 @@
 	@apply absolute top-0 h-full w-full bg-center;
 }
 
-@media only screen and (max-width: @bp) {
-	.BackgroundGrid {
-		@apply bg-none;
+.BGHide {
+	@media only screen and (max-width: @bp) {
+		& {
+			@apply bg-none;
+		}
 	}
 }
