fix: 修正 AudioProvider 中的頁面重載邏輯，更新樣式以改善視覺效果

--- a/src/components/Interview/interviewLogoType.less
+++ b/src/components/Interview/interviewLogoType.less
@@ -1,7 +1,7 @@
 @import url('../../settings/config.less');
 
 .InterviewLogoType {
-	transform: scale(0.91);
+	transform: scale(0.91) translateY(0px);
 	.title {
 		top: 50%;
 		margin-top: -350px;
@@ -59,7 +59,7 @@
 
 	@media only screen and (max-width: @bp) {
 		& {
-			transform: scale(1);
+			transform: scale(0.85) translateY(0px);
 		}
 	}
 }
